updating controller to dto